--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@typescript-eslint/parser": "^3.4.0",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
