--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "ts-node-dev --transpileOnly --inspect --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -22,6 +23,7 @@
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.10",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -29,6 +31,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.0",
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
