--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
