--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.14.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.25",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
