--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,17 +1,8 @@
 {
-  "type": "mysql",
+  "type": "postgres",
   "host": "localhost",
-  "port": "3306",
-  "username": "root",
+  "port": "5432",
+  "username": "postgres",
   "password": "root",
-  "database": "gobarber",
-  "entities": [
-    "./src/models/*.ts"
-  ],
-  "migrations": [
-    "./src/database/migrations/*.ts"
-  ],
-  "cli": {
-    "migrationsDir": "./src/database/migrations"
-  }
+  "database": "gostack_gobarber"
 }
