--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.0",
     "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.49",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^3.9.5"
   }
 }
