--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,7 @@
   "username": "postgres",
   "password": "root",
   "database": "gostack_gobarber",
+  "entities": ["src/models/*{.ts, .js}"],
   "migrations": [
     "./src/database/migrations/*.ts"
   ],
