--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --transpile-only --inspect --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --transpile-only --inspect --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "test": "jest"
   },
   "dependencies": {
@@ -41,6 +41,7 @@
     "jest": "^26.4.0",
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^3.9.5"
   }
 }
