--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,11 +21,19 @@
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "no-use-before-define": "off",
+    "no-unused-vars": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
-    "@typescript-eslint/interface-name-prefix": [
+    "@typescript-eslint/naming-convention": [
       "error",
-      { "prefixWithI": "always" }
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
     ],
     "import/extensions": [
       "error",
