--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,11 +5,11 @@
   "username": "postgres",
   "password": "root",
   "database": "gostack_gobarber",
-  "entities": ["src/models/*{.ts, .js}"],
+  "entities": ["src/modules/**/infra/typeorm/entities/*{.ts, .js}"],
   "migrations": [
-    "./src/database/migrations/*.ts"
+    "./src/shared/infra/typeorm/migrations/*.ts"
   ],
   "cli": {
-    "migrationsDir": "./src/database/migrations"
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
