--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.30",
+    "uuid": "^8.3.2",
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
@@ -39,8 +40,9 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.0",
+    "jest": "^27.3.1",
     "prettier": "^2.0.5",
+    "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^3.9.5"
